gcc/testsuite/rust/rustc/ui/issues/issue-34222-1.rs
fn main() {
    /// comment // { dg-error ".E0585." "" { target *-*-* } }
}

